fix horizontal scroll bug

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   flex-flow: row wrap;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .App {
